# uk-trade-shock-study

./: .gitignore  Makefile  README.md  REFEREE_AUDIT.md  REVISION_STATUS.md  UPGRADE_ROADMAP.md  pyproject.toml  tariff_paper_lit_review.md
analysis/: build_measured_shocks.py  build_trade_by_sic.py  demographics.py  download_data.py  figstyle.py  figures.py  geo_choropleth.py  geo_impact.py  measured_cushioning.py  mechanism_decomposition.py  poverty_gap.py  reallocation_calibration.py  run_reallocation.py  run_scenarios.py  scenario_testing.py  seed0_cushioning.py  sensitivity_duration_takeup.py  sensitivity_grid.py  supply_chain_scenario.py  takeup_sensitivity.py  validate_manifest.py  write_paper_results.py  write_uncertainty_design.py
paper/: generated_results.tex  main.aux  main.out  main.tex
results/: absolute_poverty_fixed_line_seed0.json  cushioning_decomposition.json  cushioning_seed0.json  demographics.json  epd_displacement.json  epd_inactivity.json  epd_mixed.json  epd_reallocation.json  epd_reallocation_lag3.json  epd_reallocation_lowpenalty.json  epd_wage_cut.json  full_tariff_displacement.json  full_tariff_inactivity.json  full_tariff_mixed.json  full_tariff_reallocation.json  full_tariff_reallocation_lag3.json  full_tariff_reallocation_lowpenalty.json  full_tariff_wage_cut.json  measured_cushioning_seed0.json  measured_displacement.json  measured_wage_cut.json  mechanism_capital_reform.json  mechanism_seed0.json  parameter_uncertainty_design.csv  poverty_gap.json  reallocation_calibration.json  reallocation_cushioning.json  scenario_testing.csv  (+11 more)
(+33 files in other folders)
